2012-07-09  Niibe Yutaka  <gniibe@fsij.org>

	* tool/stlinkv2.py (stlinkv2.setup_gpio): Fix GPIOB_CRL.

	* test/rsa_keys.py (integer_to_bytes_256): Rename from
	integer_to_bytes and it should be exactly 256-byte long.

2012-07-06  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.21.
	* src/usb_desc.c (gnukStringSerial): Updated.

	* boards/FST_01/board.h (VAL_GPIOACRL): Change for SPI flash.
	* tool/stlinkv2.py (stlinkv2.setup_gpio): Likewise.
	(stlinkv2.spi_flash_init, stlinkv2.spi_flash_select)
	(stlinkv2.spi_flash_sendbyte, stlinkv2.spi_flash_read_id): New.
	(main): Add SPI flash ROM id check.

2012-07-05  Niibe Yutaka  <gniibe@fsij.org>

	* src/call-rsa.c (rsa_sign, rsa_decrypt): Don't need to setup N.

	* polarssl-0.14.0/library/rsa.c (rsa_check_pubkey)
	(rsa_check_privkey): Ifdef-out.

	More tests.
	* test/*: Add tests for admin-less mode.
	* test/features/990_reset_passphrase.feature: This is now for
	admin-less mode.
	* test/features/970_key_removal.feature: Ditto.

	* src/openpgp.c (cmd_change_password): Call ac_reset_admin when
	admin-less mode.
	(cmd_reset_user_password): Likewise.

	* src/ac.c (ac_reset_admin, ac_fini): Clear ADMIN_AUTHORIZED.

	Bug fix.
	* src/ac.c (verify_admin): Call s2k with ADMIN_AUTHORIZED.

2012-07-04  Niibe Yutaka  <gniibe@fsij.org>

	Bug fixes.
	* src/ac.c (verify_admin_0): Compare PW_LEN and BUF_LEN.

	* src/openpgp-do.c (gpg_do_chks_prvkey): Set do_ptr to NULL before
	calling flash_do_write (which might cause GC).
	(gpg_do_put_data, gpg_do_write_simple): Likewise.

	* src/openpgp.c (cmd_reset_user_password): Write to
	DO_KEYSTRING_PW1.

2012-07-03  Niibe Yutaka  <gniibe@fsij.org>

	* test/features/040_passphrase_change.feature: New.
	* test/features/203_passphrase_change.feature: New.
	* test/features/210_compute_signature.feature: Rename (was:
	203_compute_signature.feature)
	* test/features/211_decryption.feature: Rename (was:
	204_decryption.feature)

2012-07-02  Niibe Yutaka  <gniibe@fsij.org>
