@@ -1,5 +1,8 @@
 2012-07-09  Niibe Yutaka  <gniibe@fsij.org>
 
+	* src/openpgp.c (cmd_pso): For decryption, return error sooner for
+	invalid data.
+
 	* tool/stlinkv2.py (stlinkv2.setup_gpio): Fix GPIOB_CRL.
 
 	* test/rsa_keys.py (integer_to_bytes_256): Rename from
